[gd_scene load_steps=10 format=3 uid="uid://dj1viwn11feii"]

[ext_resource type="Script" path="res://scripts/world.gd" id="1_8xg4p"]
[ext_resource type="PackedScene" uid="uid://bjwxdae1idwap" path="res://scenes/environment.tscn" id="1_gl10l"]
[ext_resource type="Texture2D" uid="uid://gyjgpq0bis0f" path="res://assets/aim.png" id="3_2m8jt"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_sr4fo"]
properties/0/path = NodePath("Sun:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath("Sun:visible")
properties/1/spawn = true
properties/1/replication_mode = 1

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_cdqty"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_15ll4"]
sky_material = SubResource("ProceduralSkyMaterial_cdqty")

[sub_resource type="Environment" id="Environment_kp17k"]
background_mode = 2
sky = SubResource("Sky_15ll4")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hy3xf"]
bg_color = Color(0.188235, 0.313726, 0.0627451, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_03a44"]
bg_color = Color(0.376471, 0.815686, 0.188235, 1)

[node name="World" type="Node"]
script = ExtResource("1_8xg4p")

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://scenes/player.tscn")
spawn_path = NodePath("..")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_sr4fo")

[node name="Sun" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_kp17k")

[node name="Environment" parent="." instance=ExtResource("1_gl10l")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MainMenu" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 416.0
offset_top = 198.0
offset_right = -416.0
offset_bottom = -196.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MainMenu"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MainMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Multiplayer Shooter"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="NicknameInput" type="LineEdit" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter your nickname"
alignment = 1
max_length = 24

[node name="ColorSelectionContainer" type="HBoxContainer" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="HelperLabel" type="Label" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/ColorSelectionContainer"]
layout_mode = 2
text = "Your color"

[node name="ColorPicker" type="ColorPickerButton" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/ColorSelectionContainer"]
layout_mode = 2
text = "Pick your color"
color = Color(0.752941, 0.752941, 0.752941, 1)

[node name="HSeparator2" type="HSeparator" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TimeSelectionContainer" type="HBoxContainer" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="HelperLabel" type="Label" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/TimeSelectionContainer"]
layout_mode = 2
text = "Select time of battle"

[node name="TimeButton" type="OptionButton" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/TimeSelectionContainer"]
layout_mode = 2
item_count = 2
selected = 0
popup/item_0/text = "Day"
popup/item_0/id = 0
popup/item_1/text = "Night"
popup/item_1/id = 1

[node name="HostButton" type="Button" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="HSeparator3" type="HSeparator" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="AddressInput" type="LineEdit" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "192.168.3.10"
placeholder_text = "Enter address to join"
alignment = 1

[node name="JoinButton" type="Button" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="HSeparator4" type="HSeparator" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HelpButton" type="Button" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Help"

[node name="HelpMenu" type="PanelContainer" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 417.0
offset_top = 221.0
offset_right = -416.0
offset_bottom = -221.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/HelpMenu"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/HelpMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="HelpLabel" type="Label" parent="CanvasLayer/HelpMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Move the mouse to look around
Left click on the mouse to shoot
Press A/S/W/D to move
Press SPACE to jump
Press TAB to switch weapons"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="CanvasLayer/HelpMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Close"

[node name="HUD" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Aim" type="TextureRect" parent="CanvasLayer/HUD"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.1, 0.1)
pivot_offset = Vector2(32, 32)
texture = ExtResource("3_2m8jt")
stretch_mode = 5

[node name="HealthBar" type="ProgressBar" parent="CanvasLayer/HUD"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 384.0
offset_top = 64.0
offset_right = -384.0
offset_bottom = -560.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_hy3xf")
theme_override_styles/fill = SubResource("StyleBoxFlat_03a44")
value = 100.0
show_percentage = false

[node name="AmmoLabel" type="Label" parent="CanvasLayer/HUD"]
layout_mode = 0
offset_left = 584.0
offset_top = 312.0
offset_right = 608.0
offset_bottom = 335.0
text = "âˆž"

[connection signal="spawned" from="MultiplayerSpawner" to="." method="_on_multiplayer_spawner_spawned"]
[connection signal="item_selected" from="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/TimeSelectionContainer/TimeButton" to="." method="_on_time_button_item_selected"]
[connection signal="pressed" from="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/HelpButton" to="." method="_on_help_button_pressed"]
[connection signal="pressed" from="CanvasLayer/HelpMenu/MarginContainer/VBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
